@@ -1,3 +1,8 @@
+2006-01-23  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>
+
+	* timidity/readmidi.c: XG reverb fix
+	* timidity/sysdep.h: Mingw hang up fix and digital mars fix
+
 2006-01-21  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>
 
 	* timidity/portaudio_a.c: bug fix
